--- a/index.html
+++ b/index.html
@@ -71,15 +71,11 @@
                 </div>
                 <ul class="nav nav-list primary left-menu">
                   <li class="heading">Latest Activites</li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
+                  <li><a href="#">First Post</a></li>
+                  <li><a href="#">Second Post</a></li>
+                  <li><a href="#">Third Post</a></li>
+                  <li><a href="#">Four Post</a></li>
+                  <li><a href="#">Five Post</a></li>
                 </ul>
               </aside>
             </div>
@@ -249,16 +245,12 @@
                 <img src="img/logo.jpg" alt="Bootstrap Tutorial">
                 </div>
                 <ul class="nav nav-list primary right-menu">
-                  <li class="heading">Personal Archive</li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
-                  <li><a href="#">sidebar one</a></li>
+                  <li class="heading">Personal Archive</li>                 
+                  <li><a href="#">January 2017</a></li>
+                  <li><a href="#">Februay 2017</a></li>
+                  <li><a href="#">March 2017</a></li>
+                  <li><a href="#">April 2017</a></li>
+                  <li><a href="#">May 2017</a></li>
                 </ul>
               </aside>
             </div>
